# cmake_example

./: CMakeLists.txt  main.cpp
src/: recepcionista.cpp  recepcionista.h
